privating class